<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MineActivity"
    tools:showIn="@layout/activity_mine">

    <RelativeLayout
        android:id="@+id/rLayout_mine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_border"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">
    <ImageView
        android:id="@+id/imageView_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/touxiang"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/textView_uesrname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uesrname"
        android:layout_below="@+id/imageView_icon"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/textView_Tsex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:layout_below="@+id/textView_uesrname"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/textView_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="男"
        android:layout_below="@+id/textView_uesrname"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/textView_Tsex"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/textView_usertel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usertel"
        android:layout_below="@+id/textView_Tsex"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        />
    <TextView
        android:id="@+id/textView_personalInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/personalInfo"
        android:layout_below="@+id/textView_usertel"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"/>
    </RelativeLayout>
    <Button
        android:id="@+id/btn_changeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/btn_changePwd"
        android:background="@drawable/btn_background"/>
    <Button
        android:id="@+id/btn_changePwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changePwd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/btn_checkUpdate"
        android:background="@drawable/btn_background"/>
    <Button
        android:id="@+id/btn_checkUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkUpdate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/btn_signOut"
        android:background="@drawable/btn_background"/>
    <Button
        android:id="@+id/btn_signOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signOut"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/btn_background"/>

</RelativeLayout>
