<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.UserSignUpActivity"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_user_sign_up_signUpInfo"
        android:gravity="center_horizontal|center_vertical"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/layout_border"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/activity_user_sign_up_basicInfo"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:gravity="center_vertical"
            />
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#9ad4c6"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/activity_user_sign_up_userName"
                android:gravity="center_vertical"
                />
            <EditText
                android:id="@+id/ETextUserSignUp_userName"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:layout_marginLeft="15dp"
                android:hint="@string/activity_user_sign_up_hintUserName"
                android:textSize="14dp"
                />
        </LinearLayout>
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#9ad4c6"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/activity_user_sign_up_sex"
                android:gravity="center_vertical"
                />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <RadioButton
                    android:id="@+id/RBtnUserSignUp_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_user_sign_up_male"/>
                <RadioButton
                    android:id="@+id/RBtnUserSignUp_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_user_sign_up_female"/>
            </RadioGroup>
        </LinearLayout>
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#9ad4c6"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/activity_user_sign_up_telphone"
                android:gravity="center_vertical"
                />

            <EditText
                android:id="@+id/ETextUserSignUp_telphone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:maxLength="11"
                android:background="@null"
                android:layout_marginLeft="15dp"
                android:hint="@string/activity_user_sign_up_hintTelphone"
                android:textSize="14dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/layout_border"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/activity_user_sign_up_optionalInfo"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:gravity="center_vertical"
            />
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#9ad4c6"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/activity_user_sign_up_introduce"
                android:gravity="center_vertical|top"
                />

            <EditText
                android:id="@+id/ETextUserSignUp_introduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minLines="8"
                android:maxLines="10"
                android:background="@null"
                android:maxLength="100"
                android:layout_marginLeft="15dp"
                />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/BtnUserSIgnUp_singUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/activity_user_sign_up_signUp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
