<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity"
    android:background="@drawable/sign">
    <ImageView
        android:id="@+id/IViewLogin_Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:src="@drawable/logoblue"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/ETextLogin_Telphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_sign_please_input_telphone"
        android:layout_below="@id/IViewLogin_Logo"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/ETextLogin_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:hint="@string/activity_sign_please_input_password"
        android:layout_below="@id/ETextLogin_Telphone"/>
    <Button
        android:id="@+id/BtnLogin_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_background"
        android:text="@string/activity_login_login"
        android:layout_below="@id/ETextLogin_Password"
        />


    <RelativeLayout
        android:id="@+id/LayoutLogin_forgetAndSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/BtnLogin_login"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/TViewLogin_ForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_login_forgetPassword"/>
        <TextView
            android:id="@+id/TViewLogin_Sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/activity_login_sign"/>
    </RelativeLayout>
        <TextView
            android:id="@+id/TViewLogin_otherLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_login_otherlogin"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:textSize="15dp"
            android:layout_below="@id/LayoutLogin_forgetAndSign"
            />


    <LinearLayout
        android:id="@+id/LayoutLogin_loginForOthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/TViewLogin_otherLogin"
        android:orientation="horizontal"
        android:paddingTop="20dp">
        <LinearLayout
            android:id="@+id/LayoutLogin_QQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/qq"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_QQlogin"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/LayoutLogin_WeiBo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/qq"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_WeiBologin"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
